--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--
+    Name: Michael Carter
+    Class: CIS-131-W01
+    Project: Weather Final
+  -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Weather Checker</title>
   </head>
   <body>
     <noscript>
